fix spacing

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -645,6 +645,10 @@ video {
   margin-left: 1rem;
 }
 
+.mt-16 {
+  margin-top: 4rem;
+}
+
 .block {
   display: block;
 }
@@ -765,6 +769,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-56 {
+  height: 14rem;
 }
 
 .max-h-36 {
@@ -919,6 +927,10 @@ video {
 
 .w-28 {
   width: 7rem;
+}
+
+.w-56 {
+  width: 14rem;
 }
 
 .min-w-\[400px\] {
